Surface synchronization: Reset deadline to 0 after one-shot.

A deadline should never be set more than once for a CompositorFrame
unless a client explicitly requests a second shot. This CL resets
the deadline in frames to 0 on a SurfaceLayer after commit and after
activation from pending to active layer trees. If the client expliclty
requests a new deadline, then another shot will be taken. base::nullopt
signifies to use whatever default deadline the viz service decides.

Bug: 707510, 672962
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I856c74a2c50f287d1085b4b99330c42ba6bbeb64
Reviewed-on: https://chromium-review.googlesource.com/887743
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532156}
Former-commit-id: 4717fddfddb2640549abf1a6d689ac6f9c2bca96